Optimizing and removing glitches.